---------------------------
  Jackdmp changes log
---------------------------

2007-08-21 Stephane Letz  <letz@grame.fr>

	* Fix backend port alias management (renaming in system:xxx).

2007-08-20 Stephane Letz  <letz@grame.fr>

	* Automatic server launch. Removes unneeded 'volatile' for JackTransportEngine::fWriteCounter.

2007-08-19 Stephane Letz  <letz@grame.fr>

	* Add "systemic" latencies management in CoreAudio driver.

2007-08-16 Stephane Letz  <letz@grame.fr>

	* Automatic client renaming.

2007-07-27 Stephane Letz  <letz@grame.fr>

	* Correct JackEngine::ClientCloseAux (when called from JackEngine::ClientExternalOpen). Correct JackWinEvent::Allocate.

2007-07-20 Stephane Letz  <letz@grame.fr>

	* Correct notification for kActivateClient event.

2007-06-11 Stephane Letz  <letz@grame.fr>

	* Dmitry Baikov buffer size patch.

2007-06-10 Stephane Letz  <letz@grame.fr>

	* Correct deprecated jack_set_sample_rate_callback to return 0 instead of -1.

2007-06-09 Stephane Letz  <letz@grame.fr>

	* Checking in the server to avoid calling the clients if no callback are registered.

2007-06-08 Stephane Letz  <letz@grame.fr>

	* New JackNotication.h header in preparation for callback checking in the server.

2007-05-29 Stephane Letz  <letz@grame.fr>

	* Add "callback exiting" and "jack_frame_time" tests in jack_test.

2007-05-05 Stephane Letz  <letz@grame.fr>

	* Add jack_set_client_registration_callback API.

2007-05-04 Stephane Letz  <letz@grame.fr>

	* Steven Chamberlain patch to fix jack_port_type. Test for jack_port_type behaviour in jack_test.cpp tool.

2007-05-03 Stephane Letz  <letz@grame.fr>

	* Steven Chamberlain patch to fix jack_port_by_id export.

2007-04-28 Stephane Letz  <letz@grame.fr>

	* Add new jack_port_set_alias, jack_port_unset_alias and jack_port_get_aliases API.

2007-04-27 Stephane Letz  <letz@grame.fr>

	* Add missing -D__SMP__in OSX project.

2007-04-23 Stephane Letz  <letz@grame.fr>
